practice/service/Ingress/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  # 필수
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80          # 내가 정하는 것
    targetPort: 80    # 강제 - nginx 80포트 정해져있음

---
apiVersion: v1
kind: Service
metadata:
  name: goapp-lb
  # 필수
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: goapp
  ports:
  - port: 80
    targetPort: 8080


# ip가 다르기때문에 포트 같아도 ok (goapp도 8080)
